movie_project/movies/static/movies/css/users.css
/* ... */
.image-form .header {
    display: flex;
    justify-content: space-between;
    align-items: start;
    width: 100%;
}

.image-form .header h2 {
    font-size: 1.5rem;
}

.image-form .header img:not(.poster) {
    height: 60px;
    aspect-ratio: 1 / 1;
    object-fit: cover;
    border-radius: 50%;
}

.image-form .poster {
    width: 45px;
    border-radius: 5px;
    object-fit: cover;
}

.image-form .header i {
    color: #414141;
    cursor: pointer;
}

.image-form .header p {
    font-weight: 700;
    color: #535353;
}

.image-form .image-box {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    width: 100%;
    height: 25vh;
    border: dashed 3px #c0c0c0;
    border-radius: 10px;
    margin: 1rem 0;
    margin-bottom: 0;
    cursor: pointer;
    transition: 0.3s;
}

.image-form .image-box:hover {
    background-color: #f0f0f0;
}

.image-form .image-box i {
    color: #535353;
    font-size: 1.5rem;
    padding: 1.25rem;
    border: solid 1px #c0c0c0;
    border-radius: 5px;
}

.upload-image {
    display: none;
}

#image-preview {
    height: 50%;
    aspect-ratio: 1 / 1;
    object-fit: cover;
}

.image-form h3 {
    color: #2e2e2e;
}

.image-form .line {
    width: 100%;
    height: 1px;
    margin: 10px 0;
    background-color: rgb(20, 20, 20, 0.3);
}

.image-form .people {
    display: flex;
    align-items: center;
}

.image-form .people img {
    height: 2.25rem;
    aspect-ratio: 1 / 1;
    border-radius: 50%;
    border: solid 3px white;
    object-fit: cover;
}

.image-form .people img:not(:first-child) {
    margin-left: -12px;
}

.image-form .people .fa-user {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 2.25rem;
    width: 2.25rem;
    padding: 1rem;
    font-size: 1rem;
    background-color: #dddddd;
    color: #555555;
    border: solid 3px white;
    border-radius: 50%;
}

.image-form .people .fa-user:not(:first-child) {
    margin-left: -12px;
}

.image-form .add-person-btn {
    display: flex;
    align-items: center;
    gap: 4px;
    background-color: white;
    padding: 0;
}

.image-form .add-person-btn p {
    font-weight: 700;
    color: #2e2e2e;
    margin-left: 8px;
    cursor: pointer;
}

.image-form .add-person-btn i {
    color: #2e2e2e;
}

.image-form .back-btn {
    display: none;
    gap: 4px;
    align-items: center;
    color: #464646;
}

.image-form #back-btn i {
    font-size: 1.2rem;
}

.image-form .back-btn span {
    cursor: pointer;
}

.image-form .form-actions {
    display: flex;
    justify-content: flex-end;
    gap: 10px;
    margin-top: 1rem;
}

.image-form button {
    font-family: 'Electrolize', sans-serif;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    outline: none;
    cursor: pointer;
    transition: 0.3s;
}

.image-form button[type="reset"] {
    background-color: #ebebeb;
    color: #2e2e2e;
    border: solid 1px #464646;
}

.image-form button[type="submit"] {
    background-color: rgb(0, 110, 255);
    color: white;
}

